# containerized-API-using-Docker-FastAPI-Python

./: README.md  SHORT-ANSWER.md
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
lab2/: .dockerignore  Dockerfile  README.md  locustfile.py  pyproject.toml  requirements.txt
lab2/src/: housing_predict.py  main.py
lab2/tests/: test_src.py
lab2/trainer/: train.py
