[tool.poetry]
name = "lab2"
version = "0.1.0"
description = "Lab 2: Data Models and Inference"
authors = ["Jorge Sandoval <sandoval@berkeley.edu>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = {extras = ["standard"], version = "^0.112.2"}  
joblib = "1.4.2"
scikit-learn = "1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"  # Revert to the working version
ruff = "^0.6.2"    # The original version that worked
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"