[tool.poetry]
name = "lab2"
version = "0.1.0"
description = "Lab 2: Data Models and Inference"
authors = ["Jorge Sandoval <sandoval@berkeley.edu>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = {extras = ["standard"], version = "^0.112.2"}  
joblib = "1.4.2"
scikit-learn = "1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"